--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -33,7 +33,8 @@ jobs:
       id-token: 'write'
 
     steps:
-
+    - uses: actions/checkout@v3
+    
     - name: Docker configuration
       run: |-
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
